# tagviewer3

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .syntastic_cpp_config  CMakeLists.txt  Doxyfile  README.md  SETTING_CHECKLIST.md  asan.supp  clang-format.sh  clang-tidy.sh  genqrc.sh  make_backup.sh  run_debug.sh
.github/workflows/: build.yml  clang-tools.yml
include/: AboutDialog.hpp  Action.hpp  ActionBar.hpp  AspectRatioLabel.hpp  CenterPanel.hpp  ComboBoxHelpers.hpp  DataStreamList.hpp  DebugPanel.hpp  FileList.hpp  FiltersSidebar.hpp  MainWindow.hpp  Menu.hpp  PropertiesSidebar.hpp  QVariantType.hpp  Settings.hpp  SettingsDialog.hpp  SettingsTreeView.hpp  StatusBar.hpp  custom_types.hpp  definitions.hpp  icons.hpp  initptr.hpp  links.hpp  pragmas.hpp  settings_prop_list.hpp  templates.hpp  themes.hpp
include/TagSpace/: Prop.hpp  Tag.hpp  TagSpace.hpp
include/TagSpaceConfig/: DataBackedModel.hpp  PropTypeComboBoxDelegate.hpp  PropsModel.hpp  PropsView.hpp  TagSpaceConfig.hpp  TagsModel.hpp  TagsView.hpp
lib/: ColorPicker.cmake  QFontIcon.cmake  QFunctionUtils.cmake  phantom.cmake
lib/ColorPicker/: ColorIcon.cpp  ColorIcon.h  ColorPicker.cpp  ColorPicker.h  ColorPickerDelegate.cpp  ColorPickerDelegate.h  SaveGuard.cpp  SaveGuard.h
lib/phantom/: .gitignore
lib/phantom/funhouse/: main.cpp
lib/phantom/src/phantom/: phantomstyle.cpp
lib/phantom/src/styleplugin/: phantomstyleplugin.pro
resources/: resources.qrc
src/: AboutDialog.cpp  ActionBar.cpp  AspectRatioLabel.cpp  CenterPanel.cpp  ComboBoxHelpers.cpp  DebugPanel.cpp  FileList.cpp  FiltersSidebar.cpp  MainWindow.cpp  Menu.cpp  PropertiesSidebar.cpp  Settings.cpp  SettingsDialog.cpp  SettingsTreeView.cpp  StatusBar.cpp  definitions.cpp  main.cpp  themes.cpp
src/TagSpace/: Prop.cpp  Tag.cpp  TagSpace.cpp
src/TagSpaceConfig/: PropTypeComboBoxDelegate.cpp  PropsModel.cpp  PropsView.cpp  TagSpaceConfig.cpp  TagsModel.cpp  TagsView.cpp
